Initial header and nav

--- a/src/main_style.scss
+++ b/src/main_style.scss
@@ -1,7 +1,12 @@
-$orange: rgb(255, 101, 6);
-$blue: #276BA5;
+$dark: #24232D;
+$orange: #ff6506;
+$red: #C84743;
+$blue: #8DAFB9;
+$white: #F9F9FA;
+$color: #F9F9FA;
 $tablet: 768px;
 $desktop: 1280px;
 $maxWidth: 1440px;
-// $mainFont: ;
-// $secondaryFont: ;
+$titleFont: 'Roboto Condensed', sans-serif;
+$title2Font: 'Roboto Slab', serif;
+$textFont: 'Roboto', sans-serif;
