--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -2,8 +2,12 @@
 
 .header {
   background: $dark;
-  color: $color;
-  height: 75px;
+  color: $white;
+  height: 60px;
+
+  @media only screen and (min-width: $desktop) {
+    height: 75px;
+  }
 
 
   &-content {
