--- a/src/components/nav/styles.module.scss
+++ b/src/components/nav/styles.module.scss
@@ -18,6 +18,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    z-index: 10;
 
     .bar {
       width: 21px;
@@ -29,15 +30,76 @@
 
       &:first-child {
         transform-origin: 0 0;
-        }
-        &:nth-child(2) {
-          background: $orange;
-        }
-        &:last-child {
-          transform-origin: 0 100%;
-        }
+      }
+      &:nth-child(2) {
+        background: $orange;
+      }
+      &:last-child {
+        transform-origin: 0 100%;
+      }
+    }
+
+  }
+
+  .menu {
+    position: fixed;
+    height: 100%;
+    top: 60px;
+    right: 0;
+    width: 0;
+    background: $dark;
+    color: $white;
+    z-index: 10;
+    overflow: hidden;
+    transition: 500ms;
+
+    @media only screen and (min-width: $desktop) {
+      top: 75px;
+    }
+
+    ul {
+      margin-left: 28px;
+    }
+
+    li {
+      display: flex;
+      align-items: center;
+      list-style: none;
+      margin: 0;
+      height: 50px;
+      max-height: 50px;
+      font-size: 18px;
+      transition: 300ms;
+      width: 100%;
+      overflow: hidden;
+
+      &:hover {
+        color: $blue;
+      }
+    }
+
+    &-phone {
+      color: $white;
+      padding: 0;
+      height: 23px;
+      max-height: 23px;
+      overflow: hidden;
     }
   }
+
+  .overlay {
+    height: 100vh;
+    width: 0;
+    margin-top: 60px;
+    z-index: 1;
+    background-color: $dark;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    transition: 500ms;
+  }
+  
 
   &-active {
     .burger-button {
@@ -52,6 +114,15 @@
           transform: rotate(-45deg);
         }
       }
+    }
+
+    .overlay {
+      opacity: .5;
+      width: 100%;
+    }
+
+    .menu {
+      width: 200px;
     }
   }
 }
