--- a/src/components/panel-image/styles.module.scss
+++ b/src/components/panel-image/styles.module.scss
@@ -1,19 +1,22 @@
 @import '../../main_style.scss';
 
-.panel {
+.panel-image {
   font-family: $textFont;
   max-width: 1440px;
-  padding: 28px 14px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  justify-content: center;
+  
   @media only screen and (min-width: $tablet) {
+    height: 284px;
+    flex-wrap: wrap;
     padding: 42px 28px;
   }
 
-  &-blue {
-    background: $dark;
-    color: $white;
+  &__content-wrapper {
+    width: 100%;
+    padding: 28px 14px;
+    text-align: center;
   }
 }
