--- a/src/components/nav/styles.module.scss
+++ b/src/components/nav/styles.module.scss
@@ -5,6 +5,36 @@
   align-items: center;
   height: 100%;
 
+  @media only screen and (min-width: $desktop) {
+    width: 420px;
+    justify-content: space-around;
+  }
+
+  &-link {
+    padding: 7px 0;
+    margin: 0 14px;
+    text-align: center;
+    font-size: 22px;
+    color: $white;
+    position: relative;
+
+    &::after {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      background: $orange;
+      bottom: 0;
+      left: 0;
+      height: 3px;
+      width: 0;
+      transition: 500ms;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
+  }
+
   &-phone {
     color: $white;
     height: 100%;
@@ -14,6 +44,10 @@
     padding: 7px;
     display: flex;
     align-items: center;
+
+    &:hover {
+      color: $orange;
+    }
   }
   
   .burger-button {
