--- a/src/main_style.scss
+++ b/src/main_style.scss
@@ -1,7 +1,11 @@
-$dark: #24232D;
-$orange: #ff6506;
-$red: #C84743;
-$blue: #8DAFB9;
+// $dark: #24232D;
+// $dark: #102542;
+// $dark: #23242F;
+$dark: #191e32;
+$orange: #ff6505;
+$red: #BF5D4C;
+// $blue: #8DAFB9;
+$blue: #37AEC2;
 $white: #F9F9FA;
 $tablet: 768px;
 $desktop: 1280px;
