--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -23,11 +23,13 @@
     align-items: center;
     margin: 0;
     margin-right: 64px;
-    font-size: 18px;
+    font-size: 22px;
     line-height: 20px;
+    color: $white;
 
     &__arrow {
       height: 21px;
+      width: 21px;
       margin-left: 14px;
     }
   }
