--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -22,32 +22,36 @@
 
     .logo {
       font-family: $title2Font;
-      font-weight: 700;
+      font-weight: 400;
       font-size: 26px;
-      width: 260px;
+      width: 245px;
       margin: 0;
-      padding: 7px 0;
       z-index: 10;
-      position: relative;
 
-      &::after {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        background: $orange;
-        bottom: 0;
-        left: 0;
-        height: 3px;
-        width: 0;
-        transition: 500ms;
-      }
-
-      &:hover::after {
+      &:hover .logo-link::after {
         width: 100%;
       }
 
-      &__link {
+      &-link {
         color: $white;
+
+        @media only screen and (min-width: $desktop) {
+          padding: 7px 0;
+          position: relative;
+
+          &::after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            background: $orange;
+            bottom: 0;
+            left: 0;
+            height: 2px;
+            width: 0;
+            transition: 500ms;
+            border-radius: 5px;
+          }
+        }
       }
 
       @media only screen and (min-width: $tablet) {
