--- a/src/components/nav/styles.module.scss
+++ b/src/components/nav/styles.module.scss
@@ -11,12 +11,15 @@
   }
 
   &-link {
-    padding: 7px 0;
-    margin: 0 14px;
-    text-align: center;
-    font-size: 22px;
     color: $white;
-    position: relative;
+    
+    @media only screen and (min-width: $desktop) {
+      font-size: 22px;
+      padding: 7px 0;
+      margin: 0 14px;
+      text-align: center;
+      position: relative;
+    }
 
     &::after {
       content: "";
@@ -25,9 +28,10 @@
       background: $orange;
       bottom: 0;
       left: 0;
-      height: 3px;
+      height: 2px;
       width: 0;
       transition: 500ms;
+      border-radius: 5px;
     }
 
     &:hover::after {
@@ -105,7 +109,7 @@
       margin: 0;
       height: 50px;
       max-height: 50px;
-      font-size: 18px;
+      font-size: 20px;
       transition: 300ms;
       width: 100%;
       overflow: hidden;
