--- a/src/components/panel-image/styles.module.scss
+++ b/src/components/panel-image/styles.module.scss
@@ -13,11 +13,16 @@
     height: 440px;
     padding: 0;
     position: relative;
+    margin: 0 auto;
+  }
+
+  &-wrapper {
+    width: 100%;
   }
 
   &__content-wrapper {
     width: 100%;
-    padding: 28px 14px;
+    padding: 42px 14px;
     text-align: center;
 
     @media only screen and (min-width: $tablet) {
@@ -33,13 +38,14 @@
 
     @media only screen and (min-width: $desktop) {
       position: absolute;
-      right: 175px;
+      right: 77px;
       top: 70px;
       background: $dark;
       color: $white;
       z-index: 100;
       height: 210px;
       width: 350px;
+      border-radius: 5px;
     }
   }
 }
