--- a/src/components/panel/styles.module.scss
+++ b/src/components/panel/styles.module.scss
@@ -2,9 +2,10 @@
 
 .panel {
   font-family: $textFont;
+  width: 100%;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 28px 14px;
+  padding: 42px 14px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,12 +14,17 @@
     padding: 42px 28px;
   }
 
-  // @media only screen and (min-width: $desktop) {
-  //   padding: 56px 42px;
-  // }
+  &-wrapper {
+    width: 100%;
+  }
 
   &-blue {
     background: $dark;
+    color: $white;
+  }
+
+  &-red {
+    background: $red;
     color: $white;
   }
 
@@ -31,8 +37,8 @@
     }
 
     @media only screen and (min-width: $desktop) {
+      position: relative;
       flex-direction: row;
-      justify-content: space-around;
       max-height: 450px;
       padding-bottom: 42px;
     }
