--- a/src/components/phone-cta/styles.module.scss
+++ b/src/components/phone-cta/styles.module.scss
@@ -13,6 +13,10 @@
     right: 20px;
     bottom: 20px;
     z-index: 100;
+
+    @media only screen and (min-width: $maxWidth) {
+      right: calc((100vw - 1440px)/2 + 20px);
+    }
   }
 
   &-link {
