--- a/src/components/panel-column/styles.module.scss
+++ b/src/components/panel-column/styles.module.scss
@@ -2,26 +2,17 @@
 
 .column {
   width: 100%;
+  box-sizing: border-box;
   
   @media only screen and (min-width: $tablet) {
     width: 50%;
-    max-width: 500px;
   }
 
-  @media only screen and (min-width: $desktop) {
-    &:first-of-type {
-      margin-left: 100px;
-    }
-    
+  @media only screen and (min-width: $desktop) {    
     &:last-of-type {
       background: $blue;
-      border-radius: 5px;
+      color: $dark;
       padding: 56px;
-      z-index: 100;
-      position: absolute;
-      width: 385px;
-      right: 240px;
-      top: -28px;
 
       p {
         margin: 0;
