--- a/src/components/paragraph/styles.module.scss
+++ b/src/components/paragraph/styles.module.scss
@@ -2,11 +2,12 @@
 
 .paragraph {
   max-width: 570px;
-  font-weight: 400;
+  font-weight: 300;
+  font-size: 22px;
   text-align: center;
   margin-bottom: 28px;
 
   @media only screen and (min-width: $tablet) {
-    margin-bottom: 42px;
+    margin-bottom: 40px;
   }
 }
