--- a/src/components/header-image/styles.module.scss
+++ b/src/components/header-image/styles.module.scss
@@ -3,7 +3,7 @@
 .header-image-wrapper {
 
   @media only screen and (min-width: $desktop) {
-    height: 100%;
     width: 100%;
+    margin-bottom: 40px;
   }
 }
