--- a/src/components/panel-image/styles.module.scss
+++ b/src/components/panel-image/styles.module.scss
@@ -40,8 +40,8 @@
       position: absolute;
       right: 77px;
       top: 70px;
-      background: $dark;
-      color: $white;
+      background: $white;
+      color: $dark;
       z-index: 100;
       height: 210px;
       width: 350px;
