--- a/src/components/phone-cta/styles.module.scss
+++ b/src/components/phone-cta/styles.module.scss
@@ -15,13 +15,11 @@
     z-index: 100;
 
     @media only screen and (min-width: $maxWidth) {
-      right: calc((100vw - 1440px)/2 + 20px);
+      right: calc((100vw - 1400px)/2 - 50px);
     }
-  }
 
-  &-link {
-    height: 40px;
-    width: 40px;
-
+    svg {
+      pointer-events: none;
+    }
   }
 }
