--- a/src/main_style.scss
+++ b/src/main_style.scss
@@ -1,12 +1,15 @@
-// $dark: #24232D;
-// $dark: #102542;
-// $dark: #23242F;
-$dark: #191e32;
-$orange: #ff6505;
+// $dark: #191e32;
+// $orange: #ff6505;
 $red: #BF5D4C;
-// $blue: #8DAFB9;
-$blue: #37AEC2;
-$white: #F9F9FA;
+// $blue: #81848f;
+// $white: #f1f0e7;
+
+$dark: #101727;
+$orange: #FF611D;
+$white: #FFF;
+$blue: #CCCFD3;
+
+
 $tablet: 768px;
 $desktop: 1280px;
 $maxWidth: 1440px;
