--- a/src/components/paragraph/styles.module.scss
+++ b/src/components/paragraph/styles.module.scss
@@ -5,6 +5,7 @@
   font-weight: 300;
   font-size: 22px;
   text-align: center;
+  margin: 0;
   margin-bottom: 28px;
 
   @media only screen and (min-width: $tablet) {
