--- a/src/components/phone-link/styles.module.scss
+++ b/src/components/phone-link/styles.module.scss
@@ -1,6 +1,7 @@
 @import '../../main_style.scss';
 
 .phone {
+  box-sizing: border-box;
   text-decoration: none;
   font-size: 28px;
   background: $orange;
