--- a/src/components/panel-image/styles.module.scss
+++ b/src/components/panel-image/styles.module.scss
@@ -5,14 +5,12 @@
   font-family: $textFont;
   max-width: 1440px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   
   @media only screen and (min-width: $desktop) {
-    height: 440px;
+    height: 500px;
     padding: 0;
-    position: relative;
     margin: 0 auto;
   }
 
@@ -37,15 +35,6 @@
     }
 
     @media only screen and (min-width: $desktop) {
-      position: absolute;
-      right: 77px;
-      top: 70px;
-      background: $white;
-      color: $dark;
-      z-index: 100;
-      height: 210px;
-      width: 350px;
-      border-radius: 5px;
     }
   }
 }
