--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -8,15 +8,21 @@
   height: 80px;
 
   &-content {
-    box-sizing: content-box;
     height: 100%;
-    width: 100%;
-    max-width: 1400px;
+    width: 100vw;
+    max-width: $maxWidth;
     margin: 0 auto;
-    padding: 0 60px;
+    padding: 0 60px 0 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media only screen and (min-width: $tablet) {
+      padding: 0 60px 0 20px;
+    }
+    @media only screen and (min-width: $desktop) {
+      padding: 0 60px;
+    }
   }
 
   &-text {
@@ -26,6 +32,7 @@
     font-size: 24px;
     line-height: 24px;
     color: $white;
+    margin-right: 10px;
 
     &__arrow {
       height: 21px;
