--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,18 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-main {
-  width: 100%;
-  max-width: 1400px;
-  min-height: calc(100vh - 60px);
 
-  @media only screen and (min-width: $desktop) {
-    min-height: calc(100vh - 155px);
-    box-sizing: content-box;
-    padding: 0 60px;
-    margin: 0 auto;
-  }
-}
 article,
 aside,
 details,
@@ -35,6 +24,24 @@ nav,
 section,
 summary {
   display: block;
+}
+main {
+  width: 100vw;
+  max-width: $maxWidth;
+  min-height: calc(100vh - 60px);
+
+  @media only screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media only screen and (min-width: $desktop) {
+    min-height: calc(100vh - 155px);
+    padding: 0 60px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 audio,
 canvas,
