--- a/src/components/heading/styles.module.scss
+++ b/src/components/heading/styles.module.scss
@@ -8,19 +8,36 @@
 
 .heading1 {
   @extend .heading;
-  font-size: 44px;
+  font-size: 36px;
   margin-bottom: 40px;
   text-align: left;
+  padding: 0 10px;
+
+  @media only screen and (min-width: $tablet) {
+    font-size: 44px;
+    padding: 0 20px;
+  }
+  @media only screen and (min-width: $desktop) {
+    padding: 0;
+  }
 }
 
 .heading2 {
   @extend .heading;
-  font-size: 32px;
+  font-size: 28px;
   margin-bottom: 30px;
+
+  @media only screen and (min-width: $tablet) {
+    font-size: 32px;
+  }
 }
 
 .heading3 {
   @extend .heading;
-  font-size: 28px;
+  font-size: 24px;
   margin-bottom: 20px;
+
+  @media only screen and (min-width: $tablet) {
+    font-size: 28px;
+  }
 }
