--- a/src/components/list/styles.module.scss
+++ b/src/components/list/styles.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  align-items: center;
   width: 100%;
   font-weight: 400;
   margin: 0;
