--- a/src/components/contact-page/styles.module.scss
+++ b/src/components/contact-page/styles.module.scss
@@ -1,5 +1,11 @@
 @import '../../main_style.scss';
 
+.wrapper {
+  background: $white;
+  color: $dark;
+  width: 100%;
+}
+
 .row {
   display: flex;
 }
@@ -7,16 +13,38 @@
 .column {
   display: flex;
   flex-direction: column;
+  padding: 0 10px 20px 10px;
+
+  @media only screen and (min-width: $tablet) {
+    padding: 20px;
+  }
 
   @media only screen and (min-width: $desktop) {
     width: 50%;
     max-width: 500px;
+    padding: 0;
   }
 }
 
 .map {
-  height: 400px;
-  width: 400px;
+  width: 100vw;
+  height: 100vw;
+
+  @media only screen and (min-width: $tablet) {
+    height: 400px;
+    width: 400px;
+  }
+
+  &-wrapper {
+    background: $blue;
+    width: 100vw;
+    height: 100vw;
+
+    @media only screen and (min-width: $tablet) {
+      height: 400px;
+      width: 400px;
+    }
+  }
 }
 
 .info {
@@ -43,14 +71,22 @@ ul {
 
 .value {
   font-family: $textFont;
+  color: $dark;
   text-align: right;
   font-size: 22px;
   flex: 2;
 }
 
+a.value:hover {
+  color: $orange;
+}
+
 .title {
-  font-family: $titleFont;
-  font-size: 28px;
-  border-bottom: 1px solid $blue;
+  border-bottom: 2px solid $orange;
   text-align: center;
+  line-height: 38px;
+}
+
+.list-wrapper {
+  margin: 0 0 30px 0;
 }
