--- a/src/components/phone-cta/styles.module.scss
+++ b/src/components/phone-cta/styles.module.scss
@@ -19,7 +19,7 @@
     }
 
     @media only screen and (min-width: $maxWidth) {
-      right: calc((100vw - 1400px)/2 - 50px);
+      right: calc((100vw - 1400)/2 - 50px);
     }
 
     svg {
