--- a/src/components/content-box/styles.module.scss
+++ b/src/components/content-box/styles.module.scss
@@ -13,7 +13,7 @@
   }
 
   @media only screen and (min-width: $desktop) {
-    padding: 40px 0;
+    padding: 40px 20px;
   }
 
   &-50 {
@@ -26,5 +26,9 @@
 
   &-100 {
     @extend .contentBox;
+
+    @media only screen and (min-width: $desktop) {
+      padding: 40px 0px;
+    }
   }
 }
