--- a/src/components/heading/styles.module.scss
+++ b/src/components/heading/styles.module.scss
@@ -26,9 +26,11 @@
   @extend .heading;
   font-size: 28px;
   margin-bottom: 30px;
+  padding: 0 10px;
 
   @media only screen and (min-width: $tablet) {
     font-size: 32px;
+    padding: 0 20px;
   }
 }
 
