--- a/src/components/list/styles.module.scss
+++ b/src/components/list/styles.module.scss
@@ -8,6 +8,7 @@
   width: 100%;
   font-weight: 400;
   margin: 0;
+  max-height: 400px;
 
   @media only screen and (min-width: $tablet) {
     max-height: 200px;
