--- a/src/components/paragraph/styles.module.scss
+++ b/src/components/paragraph/styles.module.scss
@@ -3,7 +3,8 @@
 .paragraph {
   max-width: 570px;
   font-weight: 300;
-  font-size: 22px;
+  font-size: 24px;
+  line-height: 27px;
   text-align: center;
   margin: 0;
   margin-bottom: 28px;
