--- a/src/components/contact-page/styles.module.scss
+++ b/src/components/contact-page/styles.module.scss
@@ -4,6 +4,7 @@
   background: $white;
   color: $dark;
   width: 100%;
+  padding-top: 40px;
 }
 
 .row {
@@ -89,4 +90,12 @@ a.value:hover {
 
 .list-wrapper {
   margin: 0 0 30px 0;
+}
+
+.image {
+  width: 400px;
+  height: 166px;
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
 }
