Add info to footer

--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+
+.value {
+  display: none;
+
+  @media only screen and (min-width: $tablet) {
+    display: inline-block;
+  }
+}
